fix: not centered page title & renamed component Article to Post

--- a/src/components/pages/Post/Post.scss
+++ b/src/components/pages/Post/Post.scss
@@ -68,6 +68,7 @@
       --background: var(--ion-color-primary);
       --progress-background: white;
       border-radius: 4px;
+      height: 2px;
     }
   }
 
