--- a/src/theme/app.scss
+++ b/src/theme/app.scss
@@ -123,6 +123,7 @@ ion-toolbar {
     h1 {
       font-size: 2.3em;
       margin: auto;
+      padding-left: 107px;
 
       @include to-md {
         padding-left: 10px;
